--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack -w",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
     "serve": "serve ./ -p 4000"
   },
   "keywords": [],
